# PMOVES-DoX

./: .coderabbit.yaml  .env.example  .env.local  .env.local.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ADVANCED_FEATURES_PLAN.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PMOVES.AI_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_FIXES.py  docker-compose.cpu.yml  docker-compose.distributed.yml  docker-compose.docked.yml  docker-compose.gpu.yml  docker-compose.jetson-orin.yml  docker-compose.jetson.yml  docker-compose.n8n.yml  docker-compose.ollama-gpu.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.pmoves.yml  docker-compose.supabase.yml  docker-compose.yml  env.distributed.example  env.tier-agent  env.tier-agent.sh  package-lock.json  package.json  pyproject.toml  setup.ps1  tensorzero.toml  verify_nats.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  Dockerfile.jetson  Dockerfile.jetson.orin  README.md  alembic.ini  pyproject.toml  requirements.txt  skills_catalog.yaml  test_upload.csv
backend/app/: chr_pipeline.py  cli.py  config.py  database.py  database_factory.py  database_neo4j.py  database_supabase.py  export_poml.py  globals.py  hrm.py  main.py  qa_engine.py  search.py
backend/app/analysis/: __init__.py  financial_statement_detector.py  metric_extractor.py  ner_processor.py  spectrum_analyzer.py  structure_processor.py  summarization.py
backend/app/auth/: __init__.py  jwt.py
backend/app/extraction/: langextract_adapter.py
backend/app/ingestion/: advanced_table_processor.py  chart_processor.py  complex_table_processor.py  csv_processor.py  formula_processor.py  image_ocr.py  media_transcriber.py  openapi_ingestion.py  pdf_processor.py  postman_ingestion.py  web_ingestion.py  xlsx_processor.py  xml_ingestion.py
backend/cipher-config/: cipher.yml
backend/mcp/: manifest.json
backend/migrations/: 001_cipher_schema.sql  002_cipher_user_scoping.sql  env.py
backend/nats-config/: README.md  generate-certs.sh  nats.conf  nats.tls.conf
backend/tests/: test_advanced_processors.py  test_agent_dispatcher.py  test_analysis_processors.py  test_autotag_endpoint.py  test_chit_service.py  test_cipher_service_team_memory.py  test_database_factory.py  test_extract_tags.py  test_financial_processing.py  test_geometry_api.py  test_geometry_engine.py  test_logs_export.py  test_pdf_processor_pipeline.py  test_qa_engine_regression.py  test_reasoning_service.py  test_search_index.py  test_search_routes.py  test_spectrum_analyzer.py  test_thread_manager.py  test_web_ingestion.py
(+248 files in other folders)
