[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmoves-dox-tools"
version = "0.1.0"
description = "Developer CLI utilities for the PMOVES-DoX workspace"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PMOVES-DoX Team" }]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "typer>=0.12",
]

[project.scripts]
pmoves-cli = "tools.pmoves_cli.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]
